--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   </header> 
   <main>
     <h2>Diseño Web 2- Assignment Portal</h2>
-    <ul>
-        <p>Lista de practicas y tareas</p>
-    </ul>
+    <nav>
+      <p>Precticas y proyectos</p>
+      <a href="sitio.html">Proyecto 1</a>
+    </nav>
   </main>
   <footer>
     <p>
