--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav>
       <p>Precticas y proyectos</p>
       <a href="sitio.html">Proyecto 1</a>
+      <a href="bootstrap.html">Proyecto 2</a>
     </nav>
   </main>
   <footer>
