--- a/lugares.html
+++ b/lugares.html
@@ -13,7 +13,7 @@
         <header>
             <h1>TURWEB</h1>
             <nav>
-                <a href="inicio.html" style="border: 2px solid #fff;">Inicio</a>
+                <a href="sitio.html" style="border: 2px solid #fff;">Inicio</a>
                 <a href="contactos.html" style="border: 2px solid #fff;">Contactos</a>
                 <a href="lugares.html" style="border: 2px solid #fff;">Lugares</a>
             </nav>
