--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <header class="container-fluit bg-primary d-flex justify-content-center">
-          <p class="text-light mb-0 p-3 fs-6">Contactanos a +591 75985641</p>
+          <p class="text-light mb-0 p-3 fs-6">Conoce lo mejor turismo en Bolivia</p>
       </header>
       <nav class="navbar navbar-light bg-light p-3 id="menu";">
         <div class="container-fluid">
@@ -48,13 +48,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./imagenes/carrucle1.jpg" class="d-block w-100" alt="imagenes1" width="1100" height="560">
+            <img src="./imagenes/carrucel4.jpg" class="d-block w-100" alt="imagenes1" width="1100" height="560">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./imagenes/carrycel2.jpg" class="d-block w-100" alt="imagenes2" width="1100" height="560">
+            <img src="./imagenes/carrucel5.jpg" class="d-block w-100" alt="imagenes2" width="1100" height="560">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./imagenes/carrucel3.jpg" class="d-block w-100" alt="imagenes3" width="1100" height="560">
+            <img src="./imagenes/carrucel6.jpg" class="d-block w-100" alt="imagenes3" width="1100" height="560">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
