--- a/bootstrap.html
+++ b/bootstrap.html
@@ -74,70 +74,70 @@
       <section class="container-floid">
           <div class="row w-75 mx-auto servicio-fila">
               <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-                  <img src="./imagenes/3.jpg" alt="desarrollo" width="180" height="160">
+                  <img src="3.jpg" alt="desarrollo" width="180" height="160">
                   <div>
                     <h3 class="fs-5 mt-4 px-4 pb-1">Madidi</h3>
                     <p class="px-4">El Parque Nacional y Área Natural de Manejo Integrado Madidi se encuentra entre las provincias Abel Iturralde y Franz Tamayo, al noroeste del Departamento de La Paz.</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-                <img src="./imagenes/2.jpg" alt="desarrollo" width="180" height="160">
+                <img src="2.jpg" alt="desarrollo" width="180" height="160">
                 <div>
                   <h3 class="fs-5 mt-4 px-4 pb-1">Uyuni</h3>
                   <p class="px-4">El salar de Uyuni es el mayor desierto de sal continuo y alto del mundo, con una superficie de 10 582 km²</p>
               </div>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-            <img src="./imagenes/1.jpg" alt="desarrollo" width="180" height="160">
+            <img src="1.jpg" alt="desarrollo" width="180" height="160">
             <div>
               <h3 class="fs-5 mt-4 px-4 pb-1">Cristo</h3>
               <p class="px-4">El Cristo de la Concordia es una estatua monumental de Jesucristo, que se encuentra sobre el cerro de San Pedro</p>
           </div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-          <img src="./imagenes/4.jpg" alt="desarrollo" width="180" height="160">
+          <img src="4.jpg" alt="desarrollo" width="180" height="160">
           <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">Titicaca</h3>
             <p class="px-4">Está formado por dos cuerpos de agua separados por el estrecho de Tiquina; el más grande situado</p>
         </div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-        <img src="./imagenes/5.jpg" alt="desarrollo" width="180" height="160">
+        <img src="5.jpg" alt="desarrollo" width="180" height="160">
         <div>
           <h3 class="fs-5 mt-4 px-4 pb-1">Sajama</h3>
           <p class="px-4">El parque nacional Sajama (PNS) fue la primera área protegida creada en Bolivia.</p>
       </div>
   </div>
   <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-      <img src="./imagenes/6.jpg" alt="desarrollo" width="180" height="160">
+      <img src="6.jpg" alt="desarrollo" width="180" height="160">
       <div>
         <h3 class="fs-5 mt-4 px-4 pb-1">Oruro</h3>
         <p class="px-4">El Carnaval de Oruro es una festividad folclórica y cultural en la ciudad de Oruro, así como la máxima representación de los carnavales en Bolivia</p>
     </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-    <img src="./imagenes/7.jpg" alt="desarrollo" width="180" height="160">
+    <img src="7.jpg" alt="desarrollo" width="180" height="160">
     <div>
       <h3 class="fs-5 mt-4 px-4 pb-1">Chiquitania</h3>
       <p class="px-4">Las misiones jesuíticas de Bolivia, también llamadas reducciones, fueron pueblos misionales fundados por la Compañía de Jesús</p>
   </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-  <img src="./imagenes/8.jpg" alt="desarrollo" width="180" height="160">
+  <img src="8.jpg" alt="desarrollo" width="180" height="160">
   <div>
     <h3 class="fs-5 mt-4 px-4 pb-1">Minas</h3>
     <p class="px-4">Las Minas de Potosí fue un importante centro minero que se encontraba en el cerro de Potosí</p>
 </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-    <img src="./imagenes/9.jpg" alt="desarrollo" width="180" height="160">
+    <img src="9.jpg" alt="desarrollo" width="180" height="160">
     <div>
       <h3 class="fs-5 mt-4 px-4 pb-1">Plaza Murillo</h3>
       <p class="px-4">La plaza Murillo está situada en el centro de la ciudad de La Paz</p>
   </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-  <img src="./imagenes/10.jpg" alt="desarrollo" width="180" height="160">
+  <img src="10.jpg" alt="desarrollo" width="180" height="160">
   <div>
     <h3 class="fs-5 mt-4 px-4 pb-1">Toro Toro</h3>
     <p class="px-4">>El Parque nacional Toro Toro, a veces escrito Torotoro, es un área protegida de Bolivia ubicada en la provincia de Charcas</p>
