--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Diseño Web 2- Assignment Portal</h2>
     <nav>
       <p>Precticas y proyectos</p>
-      <a href="sitio.html">Proyecto 1</a>
+      <a href="inicio2.html">Proyecto 1</a>
       <a href="bootstrap.html">Proyecto 2</a>
     </nav>
   </main>
