--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <header class="container-fluit bg-primary d-flex justify-content-center">
-          <p class="text-light mb-0 p-3 fs-6">Conoce lo mejor turismo en Bolivia</p>
+          <p class="text-light mb-0 p-3 fs-6">Conoce el mejor turismo en Bolivia</p>
       </header>
       <nav class="navbar navbar-light bg-light p-3 id="menu";">
         <div class="container-fluid">
